--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
   padding: 0;
@@ -10,7 +10,7 @@
 header {
   text-align: center;
   padding: 15px;
-  border-bottom: 3px solid #BED7DC;
+  border-bottom: 3px solid #bed7dc;
 }
 
 .form-container {
@@ -27,13 +27,12 @@ header {
   gap: 20px;
 }
 
-
 input[type="text"] {
   width: 70%;
   padding: 5px 15px;
   outline: none;
   border-radius: 7px;
-  border: 2px solid #BED7DC;
+  border: 2px solid #bed7dc;
   font-size: 0.9rem;
   font-style: italic;
   background-color: transparent;
@@ -69,13 +68,13 @@ input[type="color"]::-moz-color-swatch {
   padding: 5px 20px;
   font-size: 0.9rem;
   border-radius: 7px;
-  border: 2px solid #BED7DC;
+  border: 2px solid #bed7dc;
   cursor: pointer;
   background-color: transparent;
 }
 
 .add-btn:hover {
-  background-color: #F2F9FF;
+  background-color: #f2f9ff;
 }
 
 .grid-container {
@@ -99,7 +98,8 @@ input[type="color"]::-moz-color-swatch {
   justify-content: space-between;
 }
 
-.top-content, .bot-content {
+.top-content,
+.bot-content {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -133,7 +133,7 @@ input[type="checkbox"]::before {
   height: 0.65em;
   transform: scale(0);
   transition: 120ms transform ease-in-out;
-  box-shadow: inset 1em 1em #3674B5;
+  box-shadow: inset 1em 1em #3674b5;
 
   transform-origin: bottom left;
   clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
@@ -158,7 +158,7 @@ input[type="checkbox"]:checked {
 }
 
 .del-btn:hover {
-  background-color: #F2F9FF;
+  background-color: #f2f9ff;
 }
 
 .done {
